Bugfix 182.19: prevented text from ever spilling out of breadcrumbs; and abbreviated the genus name in the last breadcrumb on each species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1466 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -403,6 +403,9 @@ Breadcrumb Styles
 	height: 29px;
 	padding: 0 0 0 13px;
 	color: #fff;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 }
 #breadcrumb li a img {
 	margin: 0 3px 0 0;
